; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_mapping_adjust.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_mapping_adjust.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@mapping_replenish = common dso_local global i64 0, align 8
@MAXPRI_KERNEL = common dso_local global i32 0, align 4
@mapping_replenish_thread = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [47 x i8] c"pmap: mapping_replenish thread creation failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mapping_adjust() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @mapping_replenish, align 8
  %3 = trunc i64 %2 to i32
  %4 = load i32, i32* @MAXPRI_KERNEL, align 4
  %5 = call i64 @kernel_thread_start_priority(i32 %3, i32* null, i32 %4, i32* @mapping_replenish_thread)
  store i64 %5, i64* %1, align 8
  %6 = load i64, i64* %1, align 8
  %7 = load i64, i64* @KERN_SUCCESS, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %11

9:                                                ; preds = %0
  %10 = call i32 @panic(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0))
  br label %11

11:                                               ; preds = %9, %0
  %12 = load i32, i32* @mapping_replenish_thread, align 4
  %13 = call i32 @thread_deallocate(i32 %12)
  ret void
}

declare dso_local i64 @kernel_thread_start_priority(i32, i32*, i32, i32*) #1

declare dso_local i32 @panic(i8*) #1

declare dso_local i32 @thread_deallocate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
